--- a/style.css
+++ b/style.css
@@ -4,6 +4,28 @@
     box-sizing: border-box;
 }
 
+@media (max-width: 750px) {
+   #background-video {
+      display: none;
+   } 
+   body {
+      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background-size: cover;
+   }
+}
+
+#background-video {
+   width: 100vw;
+   height: 100vh;
+   object-fit: cover;
+   position: fixed;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   z-index: -1;
+}
+
 body {
     background-image: url('./white_bg.jpg');
     background-size: cover;
