--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
       display: none;
    } 
    body {
-      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background: url("wallpaper.mp4") no-repeat;
       background-size: cover;
    }
 }
