--- a/style.css
+++ b/style.css
@@ -4,28 +4,6 @@
     box-sizing: border-box;
 }
 
-@media (max-width: 750px) {
-   #background-video {
-      display: none;
-   } 
-   body {
-      background: url("wallpaper.mp4") no-repeat;
-      background-size: cover;
-   }
-}
-
-#background-video {
-   width: 100vw;
-   height: 100vh;
-   object-fit: cover;
-   position: fixed;
-   left: 0;
-   right: 0;
-   top: 0;
-   bottom: 0;
-   z-index: -1;
-}
-
 body {
     background-image: url('./white_bg.jpg');
     background-size: cover;
@@ -50,6 +28,34 @@ h1 {
     font-weight: bold;
     font-size: 6rem;
     line-height: 1;
+
+@media (max-width: 750px) {
+    #background-video { display: none; }
+    body {
+      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background-size: cover;
+    }
+}
+
+main {
+  background-color: black;
+  font-size: 2rem;
+  margin-top: 50vh;
+  padding: 10px;
+  position: relative;
+}    
     margin: 1rem 2rem;
     color: white;
+}
+
+#background-video {
+   width: 100vw;
+   height: 100vh;
+   object-fit: cover;
+   position: fixed;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   z-index: -1;
 }
