--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 @media (max-width: 750px) {
     #background-video { display: none; }
     body {
-      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background: url("wallpaper.mp4") no-repeat;
       background-size: cover;
     }
 }
