--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ h1 {
     font-weight: bold;
     font-size: 6rem;
     line-height: 1;
+
+#Wallpaper {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
