--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 video {
   object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
+}
+.video-wrapper {
+  border: 2px solid #000;
+  width: 400px;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
