--- a/style.css
+++ b/style.css
@@ -5,22 +5,9 @@
     box-sizing: border-box;
 }
 
-/* Container holding the image and the text */
-.container {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
 body {
-    background-image: url('./white_bg.jpg');
+    background-image: url('background.jpg');
     background-size: cover;
     background-position:center center;
     display: flex;
