--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     min-height: 100vh;
     font-family: 'Potta One', cursive;
     margin: 0;
-    color: black;
+    color: white;
 }
 
 h1 {
